[gd_scene load_steps=6 format=2]

[ext_resource path="res://Mob/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUDDebug.tscn" type="PackedScene" id=4]
[ext_resource path="res://DrawingBoard/DrawingBoard.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 7.91998
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.270588, 0.258824, 0.286275, 1 )

[node name="MobTimer" type="Timer" parent="."]

[node name="DifficultyTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="HUDDebug" parent="." instance=ExtResource( 4 )]

[node name="DrawingBoard" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 574 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
[connection signal="decrease_mob_timer" from="HUDDebug" to="." method="decrease_mob_timer"]
[connection signal="increase_difficulty_timer" from="HUDDebug" to="." method="increase_difficulty_timer"]
[connection signal="reset_difficulty_timer" from="HUDDebug" to="." method="reset_difficulty_timer"]
[connection signal="reset_mob_timer" from="HUDDebug" to="." method="reset_mob_timer"]
